--- a/research.html
+++ b/research.html
@@ -143,7 +143,7 @@
 										<tbody>
 											<tr>
 											<td>2020 to Present</td>      
-													<td> <a href="#" class="image fit"><img src="images/GLOBAL_white_web.png" alt="" /></a><strong>National Science Foundation, Digitization TCN DBI-2001500 - </strong>Collaborative: Building a global consortium of bryophytes and lichens: keystones of cryptobiotic communities (GLOBAL). Twenty-five collaborating institutions. <strong>Lead PI: Budke JM (TENN).</strong> <a href="https://globaltcn.utk.edu/"> Project Website </a>- <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2001500&HistoricalAwards=false" target="_blank"> Online Abstract </a></td>
+													<td> <a href="#" class="image right"><img src="images/GLOBAL_white_web.png" alt="" /></a><strong>National Science Foundation, Digitization TCN DBI-2001500 - </strong>Collaborative: Building a global consortium of bryophytes and lichens: keystones of cryptobiotic communities (GLOBAL). Twenty-five collaborating institutions. <strong>Lead PI: Budke JM (TENN).</strong> <a href="https://globaltcn.utk.edu/"> Project Website </a>- <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2001500&HistoricalAwards=false" target="_blank"> Online Abstract </a></td>
 											</tr>
 										</tbody>
 									</table>
