--- a/research.html
+++ b/research.html
@@ -150,7 +150,11 @@
 									<h4>Relevant publications:</h4><div class="table-wrapper">
 									<table>
 										<tbody>
-																<tr>
+												
+											<td>2022</td>      
+												<td>Lewis RA, <strong>Budke JM.</strong> Bryophyte specimen organization and storage systems: A comparative assessment of staff practices and user preferences. <i>The Bryologist</i> 125: 222-247.<a href="https://doi.org/10.1639/0007-2745-125.2.222" target="_blank"> Online </a></td>
+											</tr>			
+											<tr>
 											<td>2022</td>      
 												<td>Harrison GR**, Boggess LM, <strong>Budke JM,</strong> Madritch MD. Rock-climbing shifts cliff-face vegetation community composition based on site characteristics. <i>Applied Vegetation Science</i> 25(2): e12667. (**graduate student collaborator)<a href="https://doi.org/10.1111/avsc.12667" target="_blank"> Online </a></td>
 											</tr>
