maryam photo fix

--- a/labmembers.html
+++ b/labmembers.html
@@ -70,7 +70,7 @@
 								</header>
 							  <div class="row">
 								  <div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="" class="image fit"><img src="images/Maryam2.JPG" alt="" /></a>
+										<a href="" class="image fit"><img src="images/Maryam2.jpg" alt="" /></a> 
 										<a href="" target="_blank"><p><strong>Dr. Maryam Norouzizarmehri<br />
 										  Postdoctoral Researcher</strong><br /> 
 											Jan 2023 – Present</p></a>
