--- a/labmembers.html
+++ b/labmembers.html
@@ -70,8 +70,8 @@
 								</header>
 							  <div class="row">
 								  <div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="" class="image fit"><img src="images/Maryam2.jpg" alt="" /></a> 
-										<a href="" target="_blank"><p><strong>Dr. Maryam Norouzizarmehri<br />
+										<a href="NorouzizarmehriPostdocPage.html" class="image fit"><img src="images/Maryam2.jpg" alt="" /></a> 
+										<a href="NorouzizarmehriPostdocPage.html" target="_blank"><p><strong>Dr. Maryam Norouzizarmehri<br />
 										  Postdoctoral Researcher</strong><br /> 
 											Jan 2023 – Present</p></a>
 									<p>Ph.D. in Plant Systematics,  <a  href="https://khu.ac.ir/en" target="_blank">Kharazmi University,</a> 2021&nbsp; &nbsp; &nbsp; </p>
