--- a/outreach.html
+++ b/outreach.html
@@ -48,8 +48,8 @@
 									<!-- content -->
 								  <div class="col-8 col-8-narrow col-12-mobilep">
 										<a name="outdoorbotanypresentations"></a>
-									<h3>Outdoor Botany Presentations</h3><p>Members of the Budke Lab are active leaders with the Spring Wildflower Pilgrimage in the Great Smoky Mountains National Park. They lead walks focusing on ferns and mosses. Because of COVID-19, for a second year we will unfortunately not be able to meet face-to-face in the GSMNP;  <strong><a href="http://www.wildflowerpilgrimage.org/"> instead we will hold a VIRTUAL pilgrimage beyond the Park from May 8-16, 2021. Click here for more info. </a></strong></p>
-									  <p>Dr. Budke also led workshops focusing on mosses and ferns at a variety of outdoor venues when she was a graduate studnet in Connecticut. These walks focus on learnig how to identify the most common moss species and some interesting aspects of moss plant biology, including the ability of mosses to survive complete drying, long distance dispersal of spores, and the antimicrobial properties of peat mosses.</p>
+									<h3>Outdoor Botany Presentations</h3><p>Members of the Budke Lab are active leaders with the Spring Wildflower Pilgrimage in the Great Smoky Mountains National Park. They lead walks focusing on ferns and mosses. <strong><a href="http://www.wildflowerpilgrimage.org/"> Click here for more info. </a></strong></p>
+									  <p>Dr. Budke also led workshops focusing on mosses and ferns at a variety of outdoor venues when she was a graduate studnet in Connecticut. These walks focus on learning how to identify the most common moss species and some interesting aspects of moss plant biology, including the ability of mosses to survive complete drying, long distance dispersal of spores, and the antimicrobial properties of peat mosses.</p>
 									</div>
 									<!-- image -->
 									<div class="col-4 col-4-narrow col-12-mobilep">
@@ -87,7 +87,7 @@
 	<div class="col-8 col-8-narrow col-12-mobilep">
 	  <h3><a href="http://knoxgarden.org/classes-events/workshops/" target="_blank">Knoxville Botanical Garden: Moss Talks &#38; Walks </a></h3>
 										<p>Mysterious Mosses Lecture with Dr. Budke<br />
-										Unless you look closely, you may never know all the wonders that lie hidden in the miniature world of mosses. Dr. Budke annually lectures at the Knoxville Botanical Garden about the diversity of mosses that live in our lawns, between the sidewalk cracks, and in our local forests. Attendees gain identification skills, learn how these tiny plants are important players in our native ecosystems, and go on a photographic adventure to explore mosses from around the world. <a href="http://knoxgarden.org/classes-events/workshops/" target="_blank">Click here to register here to attend the lecture on March 9th, 2021.</a> 
+										Unless you look closely, you may never know all the wonders that lie hidden in the miniature world of mosses. Dr. Budke annually lectures at the Knoxville Botanical Garden about the diversity of mosses that live in our lawns, between the sidewalk cracks, and in our local forests. Attendees gain identification skills, learn how these tiny plants are important players in our native ecosystems, and go on a photographic adventure to explore mosses from around the world. 
 		</p>
 		<p>Moss Walk with Ph.D. Student Eric Shershen<br />
 		 Eric leads interactive walks around the Garden centered on mosses. Oftentimes we walk right past mosses without so much a second glance, but in this guided walk you will learn just where and what to look out for! You will become familiar with the various species of mosses found throughout the Gardens and learn the key characteristics to identify them. On our walk, we will also talk about the adaptations these plants have to survive an ever-changing world.
@@ -188,7 +188,7 @@
 								</div>
 							</div>
 					<div class="copyright">
-				    &copy; Copyright 2022 JM Budke All rights reserved.</div>
+				    &copy; Copyright 2023 JM Budke All rights reserved.</div>
 				</footer>
 
 		</div>
