--- a/contact.html
+++ b/contact.html
@@ -84,10 +84,10 @@
 				<footer id="footer">
 					<div class="container">
 						<div class="row">
-							 <div class="col-12 col-12-narrow col-12-mobilep">
-								<h3>Interested in joining the lab?</h3>
-								<p>     We are activiely recruiting UTK undergraduate students to join the lab group to work on research projects focusing on moss parent-offspring conflict. This includes the potential for skill bulding in histology, morphological data collection, molecular systematics, and fieldwork. If our lab seems like it might be a good fit for you please send an email expressing your interest with your resume and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> 
-									      </a><br /> </p>
+							<div class="col-12 col-12-narrow col-12-mobilep">
+							  <div class="col-12 col-12-narrow col-12-mobilep">
+							</div>
+							</div>
 								<div class="col-12 col-12-narrow col-12-mobilep"><h3>Contact Info</h3>
 							</div>
 								<div class="col-3 col-6-narrow col-12-mobilep">
@@ -139,8 +139,9 @@
 								</div>
 							</div>
 					<div class="copyright">
-				    &copy; Copyright 2022 JM Budke All rights reserved.</div>
+				    &copy; Copyright 2023 JM Budke All rights reserved.</div>
 				</footer>
+
 		</div>
 
 		<!-- Scripts -->
