Not recruiting students
no more grad students

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							
 								  <h3> Interested in joining the lab? <br /> 
 									  We are activiely recruiting UTK undergraduate students to join the lab to work on research projects focusing on moss parent-offspring conflict. This includes the potential for skill bulding in histology, morphological data collection, molecular systematics, and fieldwork. If our lab seems like it might be a good fit for you, please send an email expressing your interest with your CV/resume and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> 
-								<h3>Unfortunately we are not recruiting graduate students for the December 2023 application deadline. Please check back for open positions in fall 2024. <br />
+								<h3>Unfortunately we are not recruiting graduate students for the December 2023 application deadline. <br /> Please check back for open positions in fall 2024. <br />
 							  
 						</footer>
 					</div>
