--- a/labmembers.html
+++ b/labmembers.html
@@ -58,9 +58,15 @@
 									<a href="https://scholar.google.com/citations?hl=en&user=CJ6j1Y0AAAAJ&view_op=list_works&gmla=AJsN-F764UKF9tsLgJVXe7E9gbAX_UcBC15kEFklgE14D4lMlJCZQjBMespd37oBvUc4YeINrT_Li9tsAEHfRmb4PtzOr5SmgQ" target="_blank">Google Scholar Page</a><br />
 									<a href="people_files/Budke_CV64Full.pdf" target="_blank">Current CV</a>
 							  </ul></p>
-								<br /><p>
+								<br />
 
-							
+						</section>
+			<!-- Interest in the lab -->
+							<section>
+								  <h3> <center>Interested in joining the lab? <br /> 
+									  We are activiely recruiting UTK undergraduate students to join the lab to work on research projects focusing on moss parent-offspring conflict. This includes the potential for skill bulding in histology, morphological data collection, molecular systematics, and fieldwork. If our lab seems like it might be a good fit for you, please send an email expressing your interest with your CV/resume and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> <br /> 
+									  <br /> 
+								Unfortunately we are not recruiting graduate students for the December 2023 application deadline.<br />  Please check back for open positions in fall 2024. <br /></center>
 							  
 							</section>
 							<!-- current Lab -->
