--- a/labmembers.html
+++ b/labmembers.html
@@ -194,7 +194,7 @@
 										<p><strong>Blakeney Jordan<br />Undergraduate Researcher</strong><br /> 
 											June 2023 – Present</p>
 									<p>
-									  Major –</p>
+									  Major –&nbsp;Biological Sciences, concentration ...</p>
 								</div>
 
 								  
