--- a/labmembers.html
+++ b/labmembers.html
@@ -141,7 +141,7 @@
 		    <a href="" target="_blank"><p><strong>Ainun Nadifah<br />Ph.D. Student</strong><br /> 
 									    Aug 2023 – Present</p></a>
 			<p>M.S. in Biology, <a href="https://www.usf.edu/arts-sciences/departments/ib/" target="_blank">University of South Florida,</a> 2020<br />
-									B.S. in Biology, <a href="https://www.usf.edu/arts-sciences/departments/ib/" target="_blank">Universitas Sebelas Maret,</a> 2012</p>
+									B.S. in Biology, <a href="https://uns.ac.id/en/" target="_blank">Universitas Sebelas Maret,</a> 2012</p>
 										 <p>
 											<span class="icon solid fa-envelope"><span class="label">Email</span></span> 
 											&nbsp; <a href="mailto:anadhif1@vols.utk.edu">anadhif1@vols.utk.edu</a><br />
@@ -152,7 +152,7 @@
 										<a href="" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
 								  <a href="StudentPage_Kennedy.html" target="_blank"><p><strong>Isabel Hildesheim<br />Ph.D. Student</strong><br /> 
 									    Aug 2023 – Present</p></a>
-									<p>B.S. in Biology, <a href=" " target="_blank">Roanoke College,</a> 2020</p>
+									<p>B.S. in Biology, <a href="https://www.roanoke.edu/inside/a-z_index/biology" target="_blank">Roanoke College,</a> 2020</p>
 										 <p>
 											<span class="icon solid fa-envelope"><span class="label">Email</span></span> 
 											&nbsp; <a href="mailto:ihildesh@vols.utk.edu">ihildesh@vols.utk.edu</a><br />
