--- a/labmembers.html
+++ b/labmembers.html
@@ -137,8 +137,8 @@
 										&nbsp; &nbsp;430 Hesler Biology Building<br /></p>
 								</div>
 <div class="col-3 col-6-narrow col-12-mobilep">
-			<a href="l" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
-		    <a href="" target="_blank"><p><strong>Ainun Nadifah<br />Ph.D. Student</strong><br /> 
+			<a href="https://sekolah-briofita.blogspot.com/" class="image fit"><img src="images/Nadhifah_DSCN0188.jpg" alt="" /></a>
+		    <a href="https://sekolah-briofita.blogspot.com/" target="_blank"><p><strong>Ainun Nadifah<br />Ph.D. Student</strong><br /> 
 									    Aug 2023 – Present</p></a>
 			<p>M.S. in Biology, <a href="https://www.usf.edu/arts-sciences/departments/ib/" target="_blank">University of South Florida,</a> 2020<br />
 									B.S. in Biology, <a href="https://uns.ac.id/en/" target="_blank">Universitas Sebelas Maret,</a> 2012</p>
@@ -193,6 +193,13 @@
 										<a href="#" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
 										<p><strong>Blakeney Jordan<br />Undergraduate Researcher</strong><br /> 
 											June 2023 – Present</p>
+									<p>
+									  Major –&nbsp;Biological Sciences, concentration ...</p>
+								</div>
+									<div class="col-3 col-6-narrow col-12-mobilep">
+										<a href="#" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
+										<p><strong>Shekinah Pobi<br />Undergraduate Researcher</strong><br /> 
+											Sept 2023 – Present</p>
 									<p>
 									  Major –&nbsp;Biological Sciences, concentration ...</p>
 								</div>
