--- a/labmembers.html
+++ b/labmembers.html
@@ -64,9 +64,13 @@
 			<!-- Interest in the lab -->
 							<section>
 								  <h3> <center>Interested in joining the lab? <br /> 
-									  We are activiely recruiting UTK undergraduate students to join the lab to work on research projects focusing on moss parent-offspring conflict. This includes the potential for skill bulding in histology, morphological data collection, molecular systematics, and fieldwork. If our lab seems like it might be a good fit for you, please send an email expressing your interest with your CV/resume and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> <br /> 
+									  We are activiely recruiting UTK undergraduate students to join the lab to work on research projects focusing on moss parent-offspring conflict. This includes the potential for skill bulding in histology, morphological data collection, molecular systematics, and fieldwork. If our lab seems like it might be a good fit for you, please send an email expressing your interest with your CV/resume and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu"><u>jbudke@utk.edu</a> </u><br /> 
 									  <br /> 
 								Unfortunately we are not recruiting graduate students for the December 2023 application deadline.<br />  Please check back for open positions in fall 2024. <br /></center>
+									  </section>
+									  <section>
+									  <a href="#" class="image fit"><img src="images/BudkeLab2023_LabPhoto_IMG_7879.jpg" alt="Dr. Jessica M. Budke Photo" />
+										  <br><center><strong><header> <h2>The Budke Lab Fall 2023<br /></h2></header>From Left to Right: Amy Okafor, Blakeney Jordan, Shekinah Pobi, Jessica Budke, Vishal Kennedy, Julia Butler, Isabel Hildesheim, Liam Cooley, Ainun Nadifah, and Eric Shershen<br /></center></span></strong>
 							  
 							</section>
 							<!-- current Lab -->
@@ -149,8 +153,8 @@
 			&nbsp; &nbsp;430 Hesler Biology Building<br /></p>
 								</div>
 								<div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
-								  <a href="StudentPage_Kennedy.html" target="_blank"><p><strong>Isabel Hildesheim<br />Ph.D. Student</strong><br /> 
+										<a href="https://ihildesh.wixsite.com/moss" class="image fit"><img src="images/Isabel_IMG_7303b.jpg" alt="" /></a>
+								  <a href="https://ihildesh.wixsite.com/moss" target="_blank"><p><strong>Isabel Hildesheim<br />Ph.D. Student</strong><br /> 
 									    Aug 2023 – Present</p></a>
 									<p>B.S. in Biology, <a href="https://www.roanoke.edu/inside/a-z_index/biology" target="_blank">Roanoke College,</a> 2020</p>
 										 <p>
@@ -194,14 +198,14 @@
 										<p><strong>Blakeney Jordan<br />Undergraduate Researcher</strong><br /> 
 											June 2023 – Present</p>
 									<p>
-									  Major –&nbsp;Biological Sciences, concentration ...</p>
+									  Major –&nbsp;Biological Sciences, concentration BCMB</p>
 								</div>
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
 										<p><strong>Shekinah Pobi<br />Undergraduate Researcher</strong><br /> 
 											Sept 2023 – Present</p>
 									<p>
-									  Major –&nbsp;Biological Sciences, concentration ...</p>
+									  Major –&nbsp;Biological Sciences, concentration BCMB.</p>
 								</div>
 
 								  
