--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<div class="row">
 									<div class="col-3 col-6-narrow col-12-mobile">
 										<section>
-											<a href="labmembers.html" class="image fit"><img src="images/BudkeLab2023_LabPhotoFrontPage_IMG_7879 copy.jpg" alt="" /></a>
+											<a href="labmembers.html" class="image fit"><img src="images/LabMembers.jpg" alt="" /></a>
 											<h3>Lab Members</h3>
 											<p>Our lab is full of botany enthusiasts who are studing plants from a variety of perspectives to expand our knowlege of the natural world.</p>
 											<ul class="actions">
