--- a/labmembers.html
+++ b/labmembers.html
@@ -194,18 +194,25 @@
 									  Major – Biological Sciences, concentration BCMB</p>
 								</div>
 								<div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Blakeney_lab_picture2.jpg" alt="" /></a>
 										<p><strong>Blakeney Jordan<br />Undergraduate Researcher</strong><br /> 
 											June 2023 – Present</p>
 									<p>
 									  Major –&nbsp;Biological Sciences, concentration BCMB</p>
 								</div>
 									<div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Shekinah_Lab_picture2.jpg" alt="" /></a>
 										<p><strong>Shekinah Pobi<br />Undergraduate Researcher</strong><br /> 
 											Sept 2023 – Present</p>
 									<p>
-									  Major –&nbsp;Biological Sciences, concentration BCMB.</p>
+									  Major –&nbsp;Biological Sciences, concentration BCMB</p>
+								</div>
+																	<div class="col-3 col-6-narrow col-12-mobilep">
+										<a href="#" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
+										<p><strong>Lily Cooper<br />Undergraduate Researcher</strong><br /> 
+											Oct 2023 – Present</p>
+									<p>
+									  Major –&nbsp;Biological Sciences, concentration BCMB</p>
 								</div>
 
 								  
