--- a/labmembers.html
+++ b/labmembers.html
@@ -56,7 +56,7 @@
 								    <span class="icon solid fa-envelope"><span class="label">Email</span></span> 
 											&nbsp; <a href="mailto:jbudke@utk.edu">jbudke@utk.edu</a><br />
 									<a href="https://scholar.google.com/citations?hl=en&user=CJ6j1Y0AAAAJ&view_op=list_works&gmla=AJsN-F764UKF9tsLgJVXe7E9gbAX_UcBC15kEFklgE14D4lMlJCZQjBMespd37oBvUc4YeINrT_Li9tsAEHfRmb4PtzOr5SmgQ" target="_blank">Google Scholar Page</a><br />
-									<a href="people_files/Budke_CV64Full.pdf" target="_blank">Current CV</a>
+									<a href="people_files/Budke_CV78.pdf" target="_blank">Current CV</a>
 							  </ul></p>
 								<br />
 
