--- a/labmembers.html
+++ b/labmembers.html
@@ -169,7 +169,7 @@
 										  Research Assistant</strong><br>
 									Jan 2024 – Present<br /><strong>Undergraduate Researcher</strong><br /> 
 										Jun – Dec 2023</p>
-								  <p>B.S. in Biological Sciences, concentration BCMB, <a href="https://eeb.utk.edu/" target="_blank">Univ. of Tennessee</a>, 2023 </p>
+								  <p>B.S. in Biological Sciences, concentration EEB, <a href="https://eeb.utk.edu/" target="_blank">Univ. of Tennessee</a>, 2023 </p>
 								  <p>
 											<span class="icon solid fa-envelope"><span class="label">Email</span></span> 
 											&nbsp; <a href="mailto:bjorda26@vols.utk.edu">bjorda26@vols.utk.edu</a><br />
