--- a/ButlerStudentPage.html
+++ b/ButlerStudentPage.html
@@ -42,12 +42,10 @@
 								  <div class="col-8 col-8-narrow col-12-mobilep">
 										<a name="outdoorbotanypresentations"></a>
 									<h3>Julia Butler </h3>
-									   <p><b>	M.Sc. Candidate, University of Tennessee, Knoxville, 2021 - Present <br /></b>
+									   <p><b>	M.Sc. in Ecology and Evolutionary Biology, University of Tennessee, Knoxville, 2024 <br /></b>
 									     B.A. in Biology, <a href="https://www.oberlin.edu/" target="_blank">Oberlin College</a>, 2019<br />
 									  <span class="icon solid fa-envelope"><span class="label">Email</span></span> 
 											&nbsp; <a href="mailto:jbutle63@vols.utk.edu">jbutle63@vols.utk.edu</a><br />
-									     <span class="icon solid fa-map-marker-alt"><span class="label">Address</span></span> 
-									&nbsp; &nbsp;430 Hesler Biology Building<br /></p>
 									  <p>Additional Links: 
 									    <a href="https://www.researchgate.net/profile/Julia-Butler-3" target="_blank">ResearchGate</a> - 
 										  <a href="https://orcid.org/0000-0003-2121-4991" target="_blank">ORCID</a> - 
@@ -83,7 +81,7 @@
 <footer id="footer">
 					
 					<div class="copyright">
-				    &copy; Copyright 2023 JM Budke All rights reserved.</div>
+				    &copy; Copyright 2024 JM Budke All rights reserved.</div>
 				</footer>
 
 		</div>
