--- a/research.html
+++ b/research.html
@@ -55,13 +55,16 @@
 										<tbody>
 											<tr>
 											<td>2021 to Present</td>      
-													<td><strong>National Science Foundation, CAREER DEB-2046467</strong> - Integrating natural history collections to explore the functional morphology and evolution of the parent-offspring conflict in mosses. <strong> PI: Budke JM</strong>.<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2046467&HistoricalAwards=false" target="_blank"> Online Abstract </a></td>
+													<td><strong>National Science Foundation, CAREER DEB-2046467</strong> - Integrating natural history collections to explore the functional morphology and evolution of the parent-offspring conflict in mosses. <strong> Principal Investigator: Budke JM</strong>.<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2046467&HistoricalAwards=false" target="_blank"> Online Abstract </a></td>
 											</tr>
 										</tbody>
 									</table>
 									<h4>Relevant publications:</h4><div class="table-wrapper">
 									<table>
 										<tbody>
+											<td>2024</td>      
+												<td><strong>Budke JM.</strong> Illuminating the role of the calyptra in sporophyte development. <i>Current Opinion in Plant Biology</i> 81:102565.<a href="https://doi.org/10.1016/j.pbi.2024.102565" target="_blank"> doi.org/10.1016/j.pbi.2024.102565</a> - <a href="publicationsPDF/Budke2024.pdf" target="_blank"> PDF</a></td>
+											</tr>
 											<td>2021</td>      
 												<td>Whitaker KR*, <strong>Budke JM</strong>. Moss sporophyte transpiration rates are higher when calyptrae are removed.  <i>Evansia</i> 38: 100-108.  (*undergraduate student collaborator)<a href="https://doi.org/10.1639/0747-9859-38.3.100" target="_blank"> doi.org/10.1639/0747-9859-38.3.100 </a>- <a href="publicationsPDF/Whitaker&Budke_2021_Evansia.pdf" target="_blank"> PDF</a></td>
 											</tr>
@@ -110,7 +113,7 @@
 										<tbody>
 											 <tr>
 											<td>2022</td>      
-												<td><strong>Budke JM<sup>1</sup>,</strong> Patel NR<sup>1</sup>, GoFlag Consortium, Wienhold MD, Bruggeman-Nannenga MA. Exploring systematic relationships and morphological evolution in the moss genus <i>Fissidens</i> using molecular data generated from herbarium specimens. <i>Journal of Systematics and Evolution</i> 0: 000-000. (<sup>1</sup>co-first authors)<a href="https://doi.org/10.1111/jse.12926" target="_blank"> doi.org/10.1111/jse.12926</a> - <a href="publicationsPDF/BudkeEtAl_2022_JSE.pdf" target="_blank"> PDF</a> - <a href="publicationsPDF/BudkeEtAl_2022_JSE_SupplementalInfo.docx" target="_blank"> Supplemental Info</a> </td>
+												<td><strong>Budke JM<sup>1</sup>,</strong> Patel NR<sup>1</sup>, GoFlag Consortium, Wienhold MD, Bruggeman-Nannenga MA. Exploring systematic relationships and morphological evolution in the moss genus <i>Fissidens</i> using molecular data generated from herbarium specimens. <i>Journal of Systematics and Evolution</i> 61: 868-889. (<sup>1</sup>co-first authors)<a href="https://doi.org/10.1111/jse.12926" target="_blank"> doi.org/10.1111/jse.12926</a> - <a href="publicationsPDF/BudkeEtAl_2022_JSE.pdf" target="_blank"> PDF</a> - <a href="publicationsPDF/BudkeEtAl_2022_JSE_SupplementalInfo.docx" target="_blank"> Supplemental Info</a> </td>
 											</tr>
 											<tr>
 												<td>2019</td>    
@@ -148,8 +151,12 @@
 								<table>
 										<tbody>
 											<tr>
+											<td>2024 to Present</td>      
+													<td></a><strong>National Science Foundation, DBI-2423775 - </strong>RAPID: Transferring the East Tennessee State University Herbarium to the University of Tennessee. <strong>Principal Investigator: Budke JM.</strong>  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2423775&HistoricalAwards=false" target="_blank"> Online Abstract </a></td>
+											</tr>
+																						<tr>
 											<td>2020 to Present</td>      
-													<td> <a href="#" class="image right"><img src="images/GLOBAL_white_web.png" alt="" /></a><strong>National Science Foundation, Digitization TCN DBI-2001500 - </strong>Collaborative: Building a global consortium of bryophytes and lichens: keystones of cryptobiotic communities (GLOBAL). Twenty-five collaborating institutions. <strong>Lead PI: Budke JM (TENN).</strong> <a href="https://globaltcn.utk.edu/"> Project Website </a>- <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2001500&HistoricalAwards=false" target="_blank"> Online Abstract </a></td>
+													<td> <a href="#" class="image right"><img src="images/GLOBAL_white_web.png" alt="" /></a><strong>National Science Foundation, Digitization Thematic Collections Network (TCN) DBI-2001500 - </strong>Collaborative: Building a global consortium of bryophytes and lichens: keystones of cryptobiotic communities (GLOBAL). Twenty-five collaborating institutions. <strong>Lead Principal Investigator: Budke JM (TENN).</strong> <a href="https://globaltcn.utk.edu/"> Project Website </a>- <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2001500&HistoricalAwards=false" target="_blank"> Online Abstract </a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -157,7 +164,7 @@
 									<table>
 										<tbody>
 											<td>2023</td>      
-												<td>Faidiga A**, Oliver MG, <strong>Budke JM,</strong> Kalisz S. Shifts in flowering phenology in response to spring temperatures in eastern Tennessee.   <i>American Journal of Botany</i> 0: 000-000.&nbsp;(**graduate student collaborator)<a href="https://doi.org/10.1002/ajb2.16203" target="_blank"> doi.org/10.1002/ajb2.16203</a> - <a href="publicationsPDF/FaidigaEtAl_2023_AJB.pdf" target="_blank"> PDF</a></td>
+												<td>Faidiga A**, Oliver MG, <strong>Budke JM,</strong> Kalisz S. Shifts in flowering phenology in response to spring temperatures in eastern Tennessee.   <i>American Journal of Botany</i> 110: e16203. (**graduate student collaborator)<a href="https://doi.org/10.1002/ajb2.16203" target="_blank"> doi.org/10.1002/ajb2.16203</a> - <a href="publicationsPDF/FaidigaEtAl_2023_AJB.pdf" target="_blank"> PDF</a></td>
 											</tr>	
 											<td>2022</td>      
 												<td>Lewis RA, <strong>Budke JM.</strong> Bryophyte specimen organization and storage systems: A comparative assessment of staff practices and user preferences. <i>The Bryologist</i> 125: 222-247.<a href="https://doi.org/10.1639/0007-2745-125.2.222" target="_blank"> doi.org/10.1639/0007-2745-125.2.222 - <a href="publicationsPDF/Lewis&Budke2022.pdf" target="_blank"> PDF</a></td>
@@ -246,7 +253,7 @@
 								</div>
 							</div>
 					<div class="copyright">
-				    &copy; Copyright 2023 JM Budke All rights reserved.</div>
+				    &copy; Copyright 2024 JM Budke All rights reserved.</div>
 				</footer>
 
 		</div>
