--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 							</ul>
 							
 								  <h3> Interested in joining the lab? <br /> 
-									  We are activiely recruiting UTK undergraduate students to join the lab to work on research projects focusing on moss parent-offspring conflict. This includes the potential for skill bulding in histology, morphological data collection, molecular systematics, and fieldwork. If our lab seems like it might be a good fit for you, please send an email expressing your interest with your CV/resume and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> 
-								<h3>Unfortunately we are not recruiting graduate students for the December 2023 application deadline. <br /> Please check back for open positions in fall 2024. <br />
+									  We are activiely recruiting UTK undergraduate students to join the lab to work on research projects focusing on moss parent-offspring conflict. This includes the potential for skill bulding in histology, morphological data collection, molecular systematics, and fieldwork. We are also recruiting graduate students for the December 2024 application deadline. If our lab seems like it might be a good fit for you, please send an email expressing your interest with your CV/resume and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> <br />
 							  
 						</footer>
 					</div>
@@ -171,7 +170,7 @@
 								</div>
 							</div>
 					<div class="copyright">
-				    &copy; Copyright 2023 JM Budke All rights reserved.</div>
+				    &copy; Copyright 2024 JM Budke All rights reserved.</div>
 				</footer>
 
 		</div>
