--- a/outreach.html
+++ b/outreach.html
@@ -44,17 +44,34 @@
 					<!-- Outdoor Botany Presentation -->
 							<section>
 								<a href="#" class="image fit"><img src="images/banneroutreach.jpg" alt="" /></a>
+																<div class="row">
+									<!-- content -->
+								  <div class="col-8 col-8-narrow col-12-mobilep">
+										<a name="outdoorbotanypresentations"></a>
+									<a href="https://classroom.google.com/u/1/c/NjUwMTU0ODUzNjM1"><h3><i>What The Moss Field Guide</i> - Google Classroom</h3></a>
+									  <p><strong><a href="https://classroom.google.com/u/1/c/NjUwMTU0ODUzNjM1">CLICK HERE to link to a digital version of the <i>What The Moss Field Guide</i> and more fun online activities in our Google Classroom!</a></strong></p>
+									  <p>This project was carried out in collaboration with <a href="https://www.easyasplay.org/meet-our-team">Easy As Plays's </a>Creative Director, Kashina Hickson. Special thanks to University of Tennessee undergraduate students Zoey Best, Noah Webb, and Blakeney Jordan for their great work helping to create and edit this field guide.</p>
+									</div>
+									<!-- image -->
+									<div class="col-4 col-4-narrow col-12-mobilep">
+										<a href="#" class="image fit"><img src="images/IMG_7442 2b.jpg" alt="" /></a>
+										<h1 align="center">Blakeney and Zoey Hunting for Mosses</h1>
+									</div>
+								</div>
+							</section>
+<!-- Communicating Science to the Public -->
+						<section>
 								<div class="row">
 									<!-- content -->
 								  <div class="col-8 col-8-narrow col-12-mobilep">
 										<a name="outdoorbotanypresentations"></a>
-									<h3>Outdoor Botany Presentations</h3><p>Members of the Budke Lab are active leaders with the Spring Wildflower Pilgrimage in the Great Smoky Mountains National Park. They lead walks focusing on ferns and mosses. <strong><a href="http://www.wildflowerpilgrimage.org/"> Click here for more info. </a></strong></p>
+									<h3>Outdoor Botany Presentations</h3><p>Members of the Budke Lab are active leaders with the Spring Wildflower Pilgrimage in the Great Smoky Mountains National Park. They lead walks focusing on ferns and mosses.<a href="http://www.wildflowerpilgrimage.org/"> CLICK HERE for more info. </a></p>
 									  <p>Dr. Budke also led workshops focusing on mosses and ferns at a variety of outdoor venues when she was a graduate studnet in Connecticut. These walks focus on learning how to identify the most common moss species and some interesting aspects of moss plant biology, including the ability of mosses to survive complete drying, long distance dispersal of spores, and the antimicrobial properties of peat mosses.</p>
 									</div>
 									<!-- image -->
 									<div class="col-4 col-4-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/botanypresentation.jpg" alt="" /></a>
-										<h1>Goodwin Conservation Center Hampton, CT</h1>
+										<h1 align="center">Goodwin Conservation Center Hampton, CT</h1>
 									</div>
 								</div>
 							</section>
@@ -63,20 +80,20 @@
 								<div class="row">
 									<!-- content -->
 									<div class="col-8 col-8-narrow col-12-mobilep">
-									  <a name="communicatingsciencetothepublic"></a>
-										<h3 target="_blank">Communicating Science to the Public</h3>
+										<a name="outdoorbotanypresentations"></a>
+										<h3>Communicating Science to the Public</h3>
 									
 										<p>Communicating clearly and effectively is an important skill for scientists to practice and master. We believe that scientists using their voices to educate about and advocate for science is critical to both increasing the public’s support for and government funding of research.
 										</p>
 										<h4><a href="https://www.nhpr.org/post/outsidein-exploring-moss-and-mold#stream/0" target="_blank">Exploring Moss &amp; Mold on National Public Radio</a></h4>
-											<p>Dr. Budke was one of the featured guest experts on Outside/In, a New Hampshire Public Radio's program about the natural world and how we use it. <a href="https://www.nhpr.org/post/outsidein-exploring-moss-and-mold#stream/0" target="_blank">Click here to listen to the full episode.</a> 
+											<p>Dr. Budke was one of the featured guest experts on Outside/In, a New Hampshire Public Radio's program about the natural world and how we use it. <a href="https://www.nhpr.org/post/outsidein-exploring-moss-and-mold#stream/0" target="_blank">CLICK HERE to listen to the full episode.</a> 
 										<h4><a href="http://www.mossplants.blogspot.com/" target="_blank">Moss Plants and More: Commentary on All Things Bryological</a></h4>
 											<p>Dr. Budke wrote a blog communicating information about mosses to the public. She discussed news, research articles, common species, and fun facts. <strong>This blog is currently archived and is not actively updated.</strong></p>
 									</div>
 									<!-- image -->
 									<div class="col-4 col-4-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/pincushion.JPG" alt="" /></a>
-										<h1>The pincushion moss <i>Leucobryum albidum.</i></h1>
+										<h1 align="center">The pincushion moss <i>Leucobryum albidum.</i></h1>
 									</div>
 								</div>
 							</section>
@@ -86,17 +103,17 @@
 									<!-- content -->
 	<div class="col-8 col-8-narrow col-12-mobilep">
 	  <h3><a href="http://knoxgarden.org/classes-events/workshops/" target="_blank">Knoxville Botanical Garden: Moss Talks &#38; Walks </a></h3>
-										<p>Mysterious Mosses Lecture with Dr. Budke<br />
+										<p><strong>Mysterious Mosses Lecture with Dr. Budke<br /></strong>
 										Unless you look closely, you may never know all the wonders that lie hidden in the miniature world of mosses. Dr. Budke annually lectures at the Knoxville Botanical Garden about the diversity of mosses that live in our lawns, between the sidewalk cracks, and in our local forests. Attendees gain identification skills, learn how these tiny plants are important players in our native ecosystems, and go on a photographic adventure to explore mosses from around the world. 
 		</p>
-		<p>Moss Walk with Ph.D. Student Eric Shershen<br />
+		<p><strong>Moss Walk with Ph.D. Student Eric Shershen</strong><br />
 		 Eric leads interactive walks around the Garden centered on mosses. Oftentimes we walk right past mosses without so much a second glance, but in this guided walk you will learn just where and what to look out for! You will become familiar with the various species of mosses found throughout the Gardens and learn the key characteristics to identify them. On our walk, we will also talk about the adaptations these plants have to survive an ever-changing world.
 	  </p>
 	  </div>
 									<!-- image -->
 									<div class="col-4 col-4-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/IMG_0527 copy.JPG" alt="" /></a>
-										<h1>The knothole moss <i>Anacamptodon splachnoides.</i></h1>
+										<h1 align="center">The knothole moss, <i>Anacamptodon splachnoides.</i></h1>
 									</div>	
 								</div>
 							</section>
@@ -188,7 +205,7 @@
 								</div>
 							</div>
 					<div class="copyright">
-				    &copy; Copyright 2023 JM Budke All rights reserved.</div>
+				    &copy; Copyright 2024 JM Budke All rights reserved.</div>
 				</footer>
 
 		</div>
