--- a/publications.html
+++ b/publications.html
@@ -49,11 +49,14 @@
 									<table>
 										<tbody>
 										  <tr>
+											<td>2024</td>      
+												<td><strong>Budke JM.</strong> Illuminating the role of the calyptra in sporophyte development. <i>Current Opinion in Plant Biology</i> 81:102565.<a href="https://doi.org/10.1016/j.pbi.2024.102565" target="_blank"> doi.org/10.1016/j.pbi.2024.102565</a> - <a href="publicationsPDF/Budke2024.pdf" target="_blank"> PDF</a></td>
+											</tr>
 											<td>2023</td>      
-												<td>Faidiga A**, Oliver MG, <strong>Budke JM,</strong> Kalisz S. Shifts in flowering phenology in response to spring temperatures in eastern Tennessee.   <i>American Journal of Botany</i> 0: 000-000.&nbsp;(**graduate student collaborator)<a href="https://doi.org/10.1002/ajb2.16203" target="_blank"> doi.org/10.1002/ajb2.16203</a> - <a href="publicationsPDF/FaidigaEtAl_2023_AJB.pdf" target="_blank"> PDF</a></td>
+												<td>Faidiga A**, Oliver MG, <strong>Budke JM,</strong> Kalisz S. Shifts in flowering phenology in response to spring temperatures in eastern Tennessee.   <i>American Journal of Botany</i> 110: e16203. (**graduate student collaborator)<a href="https://doi.org/10.1002/ajb2.16203" target="_blank"> doi.org/10.1002/ajb2.16203</a> - <a href="publicationsPDF/FaidigaEtAl_2023_AJB.pdf" target="_blank"> PDF</a></td>
 											</tr>
 											<td>2022</td>      
-												<td><strong>Budke JM<sup>1</sup>,</strong> Patel NR<sup>1</sup>, GoFlag Consortium, Wienhold MD, Bruggeman-Nannenga MA. Exploring systematic relationships and morphological evolution in the moss genus <i>Fissidens</i> using molecular data generated from herbarium specimens. <i>Journal of Systematics and Evolution</i> 0: 000-000. (<sup>1</sup>co-first authors)<a href="https://doi.org/10.1111/jse.12926" target="_blank"> doi.org/10.1111/jse.12926</a> - <a href="publicationsPDF/BudkeEtAl_2022_JSE.pdf" target="_blank"> PDF</a> - <a href="publicationsPDF/BudkeEtAl_2022_JSE_SupplementalInfo.docx" target="_blank"> Supplemental Info</a> </td>
+												<td><strong>Budke JM<sup>1</sup>,</strong> Patel NR<sup>1</sup>, GoFlag Consortium, Wienhold MD, Bruggeman-Nannenga MA. Exploring systematic relationships and morphological evolution in the moss genus <i>Fissidens</i> using molecular data generated from herbarium specimens. <i>Journal of Systematics and Evolution</i> 61: 868-889. (<sup>1</sup>co-first authors)<a href="https://doi.org/10.1111/jse.12926" target="_blank"> doi.org/10.1111/jse.12926</a> - <a href="publicationsPDF/BudkeEtAl_2022_JSE.pdf" target="_blank"> PDF</a> - <a href="publicationsPDF/BudkeEtAl_2022_JSE_SupplementalInfo.docx" target="_blank"> Supplemental Info</a> </td>
 											</tr>
 											<td>2022</td>      
 												<td>Lewis RA, <strong>Budke JM.</strong> Bryophyte specimen organization and storage systems: A comparative assessment of staff practices and user preferences. <i>The Bryologist</i> 125: 222-247.<a href="https://doi.org/10.1639/0007-2745-125.2.222" target="_blank"> doi.org/10.1639/0007-2745-125.2.222 - <a href="publicationsPDF/Lewis&Budke2022.pdf" target="_blank"> PDF</a></td>
@@ -248,7 +251,7 @@
 					  </div>
 	  </div>
 					<div class="copyright">
-				    &copy; Copyright 2023 JM Budke All rights reserved.</div>
+				    &copy; Copyright 2024 JM Budke All rights reserved.</div>
 	</footer>
 
 		</div>
