--- a/labmembers.html
+++ b/labmembers.html
@@ -249,7 +249,7 @@
 										<p>
 											
 											<p>
-										Subsequently – </p>
+										Subsequently – Senior Staff Scientist at <a  href="https://www.siremlab.com/" target="_blank">SiREM Lab</a></p>
 										<p>
 								  <p>
 									<p>
