--- a/labmembers.html
+++ b/labmembers.html
@@ -177,13 +177,6 @@
 								  <p>B.S. in Biological Sciences, concentration BCMB, <a href="https://eeb.utk.edu/" target="_blank">Univ. of Tennessee</a>, 2024
 									</p>
 									</div>
-								  <div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/SarahC.jpg" alt="" /></a>
-										<p><strong>Sarah Cleveland<br />Undergraduate Researcher</strong><br /> 
-											Sept 2022 – Present</p>
-									<p>
-									  Major – Plant Sciences, concentration Public Horticulture </p>
-								</div>
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/Shekinah_Lab_picture2.jpg" alt="" /></a>
 										<p><strong>Shekinah Pobi<br />Undergraduate Researcher</strong><br /> 
@@ -269,6 +262,13 @@
 									<p>
 									  Major – Forestry, concentration Urban Forestry </p>
 								</div>
+									<div class="col-3 col-6-narrow col-12-mobilep">
+										<a href="#" class="image fit"><img src="images/SarahC.jpg" alt="" /></a>
+										<p><strong>Sarah Cleveland<br />Undergraduate Researcher</strong><br /> 
+											Sept 2022 – Dec 2023</p>
+									<p>
+									  Major – Plant Sciences, concentration Public Horticulture </p>
+								</div>
 								<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/Liam2.jpg" alt="" /></a>
 										<p><strong>Liam Cooley<br />Undergraduate Researcher</strong><br /> 
@@ -276,7 +276,6 @@
 									<p>
 									  Major – Biological Sciences, concentration BCMB</p>
 								</div>
-
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/SusannaC.jpg" alt="" /></a>
 								  <p><strong>Susanna Diamond<br />Undergraduate Researcher</strong><br /> 
