--- a/publications.html
+++ b/publications.html
@@ -48,10 +48,15 @@
 									<a name="peerreviewed"></a><div class="table-wrapper">
 									<table>
 										<tbody>
+										<tr>
+											<td>2024</td>      
+												<td>Shershen E**, Stehn S, <strong>Budke JM</strong>. Environmental determinants of bryophyte community change over time. <i>Ecosphere</i> 15: e4924. (**graduate student collaborator)<a href="https://doi.org/10.1002/ecs2.4924" target="_blank"> doi.org/10.1002/ecs2.4924 </a> - <a href="publicationsPDF/ShershenEtAl_2024_Ecosphere.pdf" target="_blank"> PDF</a></td>
+											</tr>
 										  <tr>
 											<td>2024</td>      
 												<td><strong>Budke JM.</strong> Illuminating the role of the calyptra in sporophyte development. <i>Current Opinion in Plant Biology</i> 81:102565.<a href="https://doi.org/10.1016/j.pbi.2024.102565" target="_blank"> doi.org/10.1016/j.pbi.2024.102565</a> - <a href="publicationsPDF/Budke2024.pdf" target="_blank"> PDF</a></td>
 											</tr>
+										  <tr>
 											<td>2023</td>      
 												<td>Faidiga A**, Oliver MG, <strong>Budke JM,</strong> Kalisz S. Shifts in flowering phenology in response to spring temperatures in eastern Tennessee.   <i>American Journal of Botany</i> 110: e16203. (**graduate student collaborator)<a href="https://doi.org/10.1002/ajb2.16203" target="_blank"> doi.org/10.1002/ajb2.16203</a> - <a href="publicationsPDF/FaidigaEtAl_2023_AJB.pdf" target="_blank"> PDF</a></td>
 											</tr>
